Fix: Correct Gap between card on desktop

--- a/src/main.scss
+++ b/src/main.scss
@@ -187,6 +187,8 @@ body {
     }
 
     &__countdown {
+      gap: 2rem;
+
       .flex-item {
         > div {
           font-size: 5rem;
